--- a/package.json
+++ b/package.json
@@ -36,6 +36,14 @@
   },
   "devDependencies": {
     "gh-pages": "^6.1.1"
-  }
+  },
+
+  "scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+}
+
   
 }
